initial version docker file done